# sensor_gateway

./: CMakeLists.txt  README.md  client.c  main.c  makefile
inc/: shared_data.h  sighand.h
lib/inc/: sensor.h
lib/src/: sensor.c
src/: client.c  main_gateway.c  server.c  shared_data.c  sighand.c
